<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_basket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="?android:colorBackground"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                app:srcCompat="@android:color/darker_gray"
                android:id="@+id/cheifimage" />

            <TextView
                android:text="Mostafa Saleh"
                android:layout_toEndOf="@+id/cheifimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cheifname"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_toEndOf="@+id/cheifimage"
                android:layout_below="@+id/cheifname"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:isIndicator="true"/>

            <TextView
                android:id="@+id/txt_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="#266466566"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="3x"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.44"
                android:gravity="bottom"
                android:textSize="15sp"
                android:id="@+id/quantity_text" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.55"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:lineSpacingMultiplier="1.2"
                android:text="Chicken"
                android:id="@+id/itemname_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:lineSpacingMultiplier="1.2"
                android:text="30.00 LE"
                android:gravity="end"
                android:id="@+id/price_text" />

        </LinearLayout>

        <View
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.55"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/total"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="90.00 LE"
                android:gravity="end"
                android:textStyle="bold"
                android:id="@+id/total_text" />

        </LinearLayout>

        <View
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/rating_colon" />

        <LinearLayout
            android:id="@+id/rating_layout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:text="@string/food_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/qualiry_rate"
                    android:text=":"/>

                <RatingBar
                    android:id="@+id/qualiry_rate"
                    style="@style/RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:numStars="5"
                    android:stepSize="1.0" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/delivery_time"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/time_rate"
                    android:text=":"/>

                <RatingBar
                    android:id="@+id/time_rate"
                    style="@style/RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:numStars="5"
                    android:stepSize="1.0" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:text="@string/order_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/price_rate"
                    android:text=":"/>

                <RatingBar
                    android:id="@+id/price_rate"
                    style="@style/RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:numStars="5"
                    android:stepSize="1.0" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:text="@string/overall_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/experince_rate"
                    android:text=":"/>

                <RatingBar
                    android:id="@+id/experince_rate"
                    style="@style/RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:numStars="5"
                    android:stepSize="1.0" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_submit_rating"
                android:layout_width="wrap_content"
                android:text="@string/submit_rating"
                android:layout_height="55dp"
                style="@style/Button"
                android:layout_gravity="end"/>

        </LinearLayout>

        <TextView
            android:id="@+id/rating_message"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:gravity="center"/>
    </LinearLayout>
</ScrollView>